[package]
name = "pawn-shop"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pawn_shop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
devnet = []
mainnet = []
default = []

[dependencies]
anchor-lang = "0.23.0"
anchor-spl = "0.23.0"
vipers = "2.0.2"
solana-security-txt = "0.1.0"
